# A3X

./: .env.example  .gitignore  .pre-commit-config.yaml  A3X_EXECUTOR_ROLE.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README.md  assistant_cli.py  benchmark_llama_server.sh  broken_code.py  cli.py  config.py  cor_do_ceu.txt  core.py  deepreview.md  dev_run.py  exemplo.txt  exemplo_tabela.html  final_plan_test.txt  frase_exemplo.txt  llama-server  main.py  memory.db.main.vss_semantic_memory..faissindex  memory.py  missao_riqueza.a3l  my_log.txt  newly_created_log.txt  package-lock.json  package.json  plan_test.txt  plan_test_2.txt  process_whatsapp.py  project_structure_notes.md  pyproject.toml  pytest.ini  pytest_report.txt  real_step_1.py  requirements.txt  revisao.txt  (+21 more)
.cursor/rules/: criar-manifesto.mdc
a3net/integration/: a3x_bridge.py
a3x/: assistant_cli.py  axos_financial_results.txt  exemplo.py  test_auto_evolution.py
a3x-vscode-assistant/: .vscodeignore  extension.js  package.json
a3x/a3lang/: interpreter.py
a3x/a3net/: run.py
a3x/api/: log_buffer.py  main.py  state.py
a3x/cli/: agent_utils.py  cli_linter.py  commands.py  display.py  fs_utils.py  interface.py  llm_utils.py  main.py  parsing.py  server_utils.py  skill_utils.py
a3x/core/: a3x_unified.py  agent.py  agent_parser.py  agent_reflector.py  agent_state_manager.py  auto_evaluation.py  backup.py  cerebrumx.py  chat_monitor.py  code_safety.py  config.py  constants.py  context.py  context_accessor.py  db_utils.py  dynamic_replanner.py  errors.py  exception_policy.py  execution_logic.py  exploration_manager.py  federated_learning.py  finetune_pipeline.py  format_recovery.py  heuristic_planner_middleware.py  heuristics_validator.py  learning_dashboard.py  learning_logs.py  learning_watchers.py  llm_interface.py  logging_config.py  mem.py  meta_learning.py  models.py  monetization_loop.py  multimodal_collector.py  observability_dashboard.py  orchestrator.py  planner.py  planning_output_schema.json  prompt_builder.py  (+20 more)
a3x/fragments/: __init__.py  a3lang_evolver_fragment.py  aggregate_evaluator_fragment.py  anomaly_detector.py  architect.py  architect_advisor.py  autonomous_self_starter.py  base.py  basic_fragments.py  code_execution_fragment.py  competitor_fragment.py  consolidator.py  coordinator.py  coordinator_fragment.py  corrective_mutator_fragment.py  deactivator.py  debugger.py  definitions.py  evaluator.py  evolution_executor_fragment.py  evolution_orchestrator_fragment.py  evolution_planner_fragment.py  (+27 more)
benchmarks/: benchmark_results.txt
cli/: display.py  interface.py
cognition/: __init__.py  kernel.py
core/: __init__.py  __main__.py  agent.py  agent_autocorrect.py  agent_error_handler.py  agent_parser.py  agent_reflector.py  analyzer.py  backup.py  browser_manager.py  cerebrumx.py  code_runner.py  code_safety.py  config.py  core.py  db_utils.py  dispatcher.py  embeddings.py  execution_logic.py  executor.py  format_recovery.py  history_manager.py  kernel.py  llm.py  llm_interface.py  log_config.py  logging_config.py  nlg.py  nlu.py  planner.py  prompt_builder.py  react_output_schema.json  skills_utils.py  tool_executor.py  tools.py  validators.py
data/: arthur_unified_dataset.jsonl  history.json  memory.db  users.json
docs/: ADDING_NEW_SKILLS.md  ARCHITECTURE.md  CHECKLIST_REVIEW.md  PROGRESS_CHECKLIST.md  PROJECT_STATE.md  SELECTED_MODELS.md  SYSTEM_INSTRUCTIONS_AI.md  cli.md  core.md  desacoplamento_logica.md  executor.md  executor_instructions.md  llm.md  manifesto.md  manifesto_A3X_v2_colaborativo.md  manifesto_A3X_v2_consolidado_final.md  manifesto_A3X_v2_critica_recomendacoes.md  manifesto_A3X_v2_desafios_colaboracao.md  manifesto_A3X_v2_detalhado.md  manifesto_A3X_v2_estruturado.md  manifesto_A3X_v2_resiliente.md  manifesto_A3X_v2_resposta_colaborativa_LLM.md  manifesto_A3X_v2_tecnico.md  manifesto_piramide_cognitiva.md  memory.md  monetization_strategy_notes.md  pesquisa_boa.txt  progress_log.md  roadmap.md
llm/: __init__.py  inference.py
lora_zero_r2_gemma2b/: README.md  adapter_config.json  adapter_model.safetensors
memory/: __init__.py  memory_models.py  memory_system.py  models.py  self_evaluation_log.jsonl  system.py  test_models.py  test_system.py
prompts/: react_system_prompt.md
scripts/: bench_lora_vram.py  build_llama_cpp.sh  finetune_scheduler.py  make_zero_lora.py  quickstart.py  setup.sh  test_mem.py
skills/: __init__.py  auto_publisher.py  browser_skill.py  capture_screen.py  classify_sentiment.py  code_generation.py  delete_file.py  detect_objects.py  execute_code.py  fetch_url_content.py  file_manager.py  final_answer.py  generate_code.py  get_value.py  gumroad_skill.py  list_files.py  manage_files.py  market_scanner.py  memory.py  modify_code.py  ocr_image.py  performance_analyzer.py  planning.py  publisher.py  read_file.py  recall_info.py  reflection.py  remember_info.py  sales_fetcher.py  search_web.py  simulation.py  text_to_speech.py  translate_text.py  unknown.py  weather_forecast.py  web_search.py  web_search_skill.py  write_file.py
tasks/: adaptacao_falha_diretorio.json  simple_write_task.json  task_monetization_cycle.json  test_browser_skill_sequence.json
tests/: __init__.py  benchmark_ngl.py  check_vss_loading.py  conftest.py  test_agent.py  test_agent_autocorrect.py  test_agent_reflector.py  test_agent_run_basic.py  test_agent_run_errors.py  test_cerebrumx.py  test_classify_sentiment.py  test_cli.py  test_code_generation.py  test_core.py  test_core_integration.py  test_delete_file.py  test_detect_objects.py  test_execute_code.py  test_executor.py  test_final_answer.py  test_full_cycle.py  test_gen_mod_exec.txt  test_integration_cli.py  test_intent.py  test_interface.py  test_kernel.py  test_llm.py  test_manage_files.py  test_memory.py  test_modify_code.py  test_natural_language.py  test_nlu.py  test_ocr_image.py  test_planner.py  test_planning_skill.py  test_read_file_skill.py  test_reflection_skill.py  test_simulation_skill.py  test_skills.py  test_skills_interaction.py  (+4 more)
tools/: start_llama_server.sh
workspace/: dummy_train.txt
(+356 files in other folders)
